<resources>
    <string name="app_name">SmartArchive</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="take_photo_of_document">Take photo of document</string>
    <string name="_0_00">0.00</string>
    <string name="lat">LAT:</string>
    <string name="unknown">unknown</string>
    <string name="lon">LON:</string>
    <string name="sensor">Sensor:</string>
    <string name="cell_tower_wifi">Cell Tower + Wifi</string>
    <string name="updates">Updates:</string>
    <string name="off">Off</string>
    <string name="map_spots">Spot count:</string>
    <string name="event_count">Event count:</string>
    <string name="_0">0</string>
    <string name="new_waypoint">New waypoint</string>
    <string name="add_new_map_spot">Show map</string>
    <string name="show_events">show events</string>
    <string name="add_image">ADD image</string>
    <string name="save">Save</string>
    <string name="date">Date:</string>
    <string name="_10">#10</string>
    <string name="description">Description</string>
    <string name="remind_me">Remind me:</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="name_for_person">Name for person</string>
    <string name="birth_dateperson">Birth date:</string>
    <string name="add_person">ADD Person</string>
    <string name="name_person_hint">Name person hint</string>
    <string name="person_name_hint_text">new person name</string>
    <string name="person_birth_date_text_view">Person birth date text view</string>
    <string name="date_of_birth">new person birthday</string>
    <string name="person_surname_hint">new person surname</string>
    <string name="surname_for_person">Surname for person</string>
    <string name="date_of_birth_tw">birthday</string>
    <string name="title_activity_maps_activity2dfs">MapsActivity2dfs</string>
    <string name="spot_title">Spot title:</string>
    <string name="add_new_event">ADD NEW EVENT</string>
    <string name="lng">LNG:</string>
    <string name="events">Events:</string>
    <string name="title_event">Title:</string>
    <string name="description_event">Description:</string>
    <string name="date_event">Date</string>
    <string name="participants">Participants</string>
    <string name="_10_reminder">10</string>
    <string name="reminder">Reminder</string>
    <string name="title_events">Title</string>
    <string name="images_documents">Images / Documents</string>
    <string name="new_image">new image</string>
    <string name="save_event_save">save event</string>
    <string name="title_event_new">Title</string>
    <string name="documents_images">Documents / Images</string>
    <string name="add_picture">Add picture</string>
    <string name="save_event">Save event</string>
    <string name="event_reminder">Reminder</string>
    <string name="event_title">Title</string>
    <string name="event_name">Name</string>
    <string name="event_date">Date</string>
    <string name="event_add_participant">Participant</string>
    <string name="todo">TODO</string>
    <string name="unable_to_get_street_address">Unable to get street address</string>
    <string name="using_gps_sensors">Using GPS sensors</string>
    <string name="using_towers_and_wifi">Using towers and WIFI</string>
    <string name="location_is_not_being_tracked">Location is NOT being tracked</string>
    <string name="location_is_not_tracked">not Tracked loc</string>
    <string name="location_is_tracked">Location is being tracked</string>
    <string name="empty_spot">new Empty spot</string>
    <string name="location_updates">Location Updates</string>
    <string name="gps_savepower">GPS/SavePower</string>
    <string name="address">Address:</string>
    <string name="add_persons">Add person</string>
    <string name="nearest_spots">Nearest spots:</string>
    <string name="show_story">Show story</string>
    <string name="new_spot_title">new spot title</string>
    <string name="new_image_title">new image title</string>
    <string name="detect_faces">DETECT FACES</string>
    <string name="to_do">TODO</string>
    <string name="_2021_01_01">2021-01-01</string>
    <string name="event_title_x">Event title:</string>
    <string name="event_date_x">Event date:</string>
    <string name="event_reminder_years_x">Event reminder (years):</string>
    <string name="detect">detect</string>
    <string name="detected_faces_0">Detected faces: 0</string>
    <string name="detected_fasec_0">Detected fasec: 0</string>
    <string name="image">image</string>
    <string name="detected_text">Detected text:</string>
    <string name="save_spot">Save spot</string>
    <string name="add_event">Add event</string>
</resources>