<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageActivity">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:contentDescription="@string/image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/btn_detect_faces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detect"
            android:textColor="#424242" />

        <TextView
            android:id="@+id/tv_faces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detected_fasec_0" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detected_text" />

        <EditText
            android:id="@+id/imageText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
